style-platform.css
/* ... */
.carousel-caption.no_logo h1 {
	font-size:48px;	
}

.carousel-caption.no_logo p {
	font-size:2em;
}	

.carousel-caption h1 {
	font-size:34px;	
}

.carousel-caption p {
	font-size:1.143em;	
}

.carousel-caption p.disclaimer {
	display:inline-block;
	margin-left:15px;	
}

@media (min-width:768px) and (max-width:1200px) {

.carousel-caption.no_logo h1 {
	font-size:40px;	
}

.carousel-caption h1 {
	font-size:24px;	
}

.carousel-caption img#banner_retailer {
	max-width:120px;
}

}

/* Super Slides */

#slides {
  position: relative;
}
#slides .slides-container {
  display: none;
}
#slides .scrollable {
  *zoom: 1;
  position: relative;
  top: 0;
  left: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  height: 20%;
}
#slides .scrollable:after {
  content: "";
  display: table;
  clear: both;
}

.slides-navigation {
  margin: 0 auto;
  position: absolute;
  z-index: 500;
  top: 85%;
  width: 100%;
}
.slides-navigation a {
  position: absolute;
  display: block;
  width:16px;
  height:27px;
  cursor:pointer;
}
#hero .slides-navigation a.prev {
  left: 42%;
  background:url(../images/bxslider_arrow_left.png) no-repeat;
}
#hero .slides-navigation a.next {
  right: 42%;
  background:url(../images/bxslider_arrow_right.png) no-repeat;
}

#hero .slides-pagination {
  position: absolute;
  z-index: 3;
  bottom: 5%;
  text-align: center;
  width: 100%;
}
#hero .slides-pagination a {
  xborder: 2px solid #222;
  border-radius: 15px !important;
  xbackground:#8E8E8E;
  width: 10px;
  height: 10px;
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: middle;
  *vertical-align: auto;
  zoom: 1;
  *display: inline;
  xbackground-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=");
  margin:11px 5px;
  overflow: hidden;
  text-indent: -99999px;
}
#hero .slides-pagination a.current {
  background:#337ab7;
}
#hero {
	height:301px;	
}
@media (max-width: 768px) {
	#hero {
		height:568px;
		padding-left:0px;
		padding-right:0px;
		xmargin-left:-16px;
		xmargin-right:-16px;	
	}
	
	#hero .well {
		xpadding-left:0px;
		xpadding-right:0px;	
	}
	#hero img {
		xleft:-30px !important;
		opacity:.5;	
	}
	.slides-navigation a {
		display:none;	
	}
}

#hero .well {
	background-color:white;
}
#hero .banner_container {
	xwidth:70%;
	/*padding:10px 15px;*/
	/*background: -moz-linear-gradient(top,  rgba(51,51,51,0.4) 0%, rgba(51,51,51,0.4) 100%); /* FF3.6+ */

	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(51,51,51,0.4)), color-stop(100%,rgba(51,51,51,0.4))); /* Chrome,Safari4+ */
	
	/*background: -webkit-linear-gradient(top,  rgba(51,51,51,0.4) 0%,rgba(51,51,51,0.4) 100%); /* Chrome10+,Safari5.1+ */
	
	/*background: -o-linear-gradient(top,  rgba(51,51,51,0.4) 0%,rgba(51,51,51,0.4) 100%); /* Opera 11.10+ */
	
	/*background: -ms-linear-gradient(top,  rgba(51,51,51,0.4) 0%,rgba(51,51,51,0.4) 100%); /* IE10+ */
	
	/*background: linear-gradient(to bottom,  rgba(51,51,51,0.4) 0%,rgba(51,51,51,0.4) 100%); /* W3C */
	
	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66333333', endColorstr='#66333333',GradientType=0 ); /* IE6-9 */
}
#hero img {
	opacity:1 !important;	
}

#hero .well {
	xpadding:0px 40px;
	border-color:white;
}
#hero .well.active {
	xdisplay:table !important;
}
#hero .well .container {
	display:table;
    width:100%;
    height:100%;
}
#hero li>.container .row {
    display:table-cell;
    vertical-align:middle;
}

#hero li>.container .row .row {
	display:inherit;	
}
#hero .well.border {
	border-color:#e3e3e3;	
}
#hero .banner_container {
	xdisplay:table-cell;
	vertical-align:middle;
	background: rgba(0, 0, 0, 0.5);
	padding: 0px 10px;
	-webkit-box-shadow:0 0 94px 59px rgba(0, 0, 0, 0.5) !important;
	-moz-box-shadow:0 0 94px 59px rgba(0, 0, 0, 0.5) !important;
	box-shadow:0 0 94px 59px rgba(0, 0, 0, 0.5) !important;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-ms-border-radius: 3px;
	-o-border-radius: 3px;
	border-radius: 3px;	
}
#hero .banner_container h1 {
	margin-top:0px;
	font-size:2.286em;	
}
#hero .banner_container p {
	font-size:1.143em;
	margin-bottom:25px;	
}
#hero .banner_container p:last-child {
	margin-bottom:0px;	
}
#hero .banner_container .disclaimer {
	font-size:0.786em;	
}
#hero .banner_container img.retailer_img,
#hero .upr_rightside img,
#hero img.icons {
	position:inherit !important;
	left:0px !important;
	top:0px !important;
	opacity:1 !important;	
	z-index:1 !important;
}
#hero .banner_container img.retailer_img {
	max-width:90px !important;
	max-height:50px !important;
}
#hero .upr_rightside img {
	width:100% !important;
	height:100% !important;	
	max-width:193px !important;
}

#hero img.icons {
	max-height:125px !important;
	max-width:150px !important;
	margin-bottom:15px;	
}

/* Bottom Pattern */
#hero .bottom_pattern>img {
	bottom:0px !important;
}

/* Right Aligned Banner */
#hero .text-right .banner_container,
#hero .text-right .disclaimer {
	float:right;	
}
/* Three Offers */
#hero .three_offers .banner_container h1 {
	font-size:1.7em;
}
/* Dark BG */
#hero .dark_bg {
	color:#FFF;
}
/* Dark Gradient Overlay */
.dark_gradient {
	color:#FFF;
}
/*Campaign */
#hero .banner_container .row p {
	margin-bottom:10px;
}

/* Centered w Icons */

.banner_icons h1 {
	font-size:38px;	
}

.banner_icons.carousel-caption img.icons {
	margin-bottom:10px;
	max-height:125px;
}

.banner_icons .col-md-4 p {
	font-size:1.6em;	
}
.banner_icons.carousel-caption {
	left:5%;
	right:5%;
	bottom:0px;
}
@media (max-width:1199px) {
.banner_icons.carousel-caption {
	bottom:-5px;

}
.banner_icons.carousel-caption img.icons {
	max-height:90px;
}

.banner_icons h1 {
	font-size:28px;	
}

.banner_icons .col-md-4 p {
	font-size:1.3em;	
}

#hero .campaign .banner_container {
	width:100% !important;	
}
}


.carousel-indicators {
	width:auto;	
	margin-left:-5px;
	padding-left:0px;
	text-align:left;
	margin-bottom:3px;
	position:inherit;
}
/* ... */

